--- a/style.css
+++ b/style.css
@@ -1,4 +1,26 @@
+.body{
+    background-color: dodgerblue;
+}
+
 #button1{
-    background-color: red;
-    
+    background-color: rgb(201, 9, 9);
+    border-radius: 50%;
+    height: 150px;
+    width: 200px;
+    align-items: center;
+    position: absolute;
+    box-shadow: 0px 15px 10px 5px;
+    right: 500px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#button1:active{
+    height: 150px;
+    width: 200px;
+    animation: move 0.5s
+}
+
+@keyframes animation {
+    from {top:0px;}
+    to {top: 50px;}
 }
