--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
-    background-color: darkblue;
+    background-color: peachpuff;
 }
 
 #button1{
     background-color: rgb(201, 9, 9);
     border-radius: 50%;
-    height: 150px;
+    height: 200px;
     width: 200px;
     align-items: center;
     position: absolute;
@@ -13,5 +13,11 @@ body{
     left: 850px;
     top: 300px;
     font-family: 'Times New Roman', Times, serif;
+    font-size: 35px;
 }
 
+#text{
+    position: absolute;
+    left: 860px;
+    top: 225px;
+}
